// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.NavBar.Nav.Item Mixin Props control values of props Make snapshot with shallow 1`] = `
<nav
  className="color-schema-blue-rich color-schema-primary uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID01"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      _hamburger={true}
      _icon="mdi-menu"
      _onClose={null}
      _onOpen={null}
      _size="m"
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID01-header"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID01-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID01-navContainer"
      >
        <nav-bar-nav
          _size="m"
          aligned="left"
          allowTags={Array []}
          className={null}
          content={null}
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID02"
          ignoreInnerHTML={false}
          key="nav-0"
          mainAttrs={null}
          name={null}
          noIndex={false}
          offset={null}
          pureRender={false}
          ref_={null}
          selected={false}
          smoothScroll={1000}
          style={null}
          tooltip={null}
        >
          <nav-bar-nav-item
            _size="m"
            className="Item className"
            colorSchema={null}
            content={null}
            controlled={true}
            disabled={false}
            dynamic={false}
            hidden={false}
            id="uuID03"
            ignoreInnerHTML={false}
            mainAttrs={
              Object {
                "style": Object {
                  "backgroundColor": "black",
                },
              }
            }
            name="Item name"
            noIndex={true}
            onClick={null}
            pureRender={false}
            ref_={null}
            selected={false}
            style={
              Object {
                "color": "red",
                "fontSize": "20px",
              }
            }
            tooltip="Item tooltip"
          >
            <Icon
              authenticate={false}
              className={null}
              clickable={true}
              controlled={true}
              disabled={false}
              hidden={false}
              icon="mdi-home"
              id="uuID04"
              mainAttrs={null}
              name={null}
              nestingLevel={null}
              noIndex={false}
              pureRender={false}
              ref_={null}
              selected={false}
              src=""
              style={null}
              tooltip={null}
            />
            Home
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props checkGrammar 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props checkGrammar 2`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props checkGrammar 3`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props checkGrammar 4`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props checkHighlight 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props checkHighlight 2`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props checkHighlight 3`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props checkHighlight 4`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props checkSpaces 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props checkSpaces 2`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props checkSpaces 3`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props checkSpaces 4`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props className 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item my-classname"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props content 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Button
    baseline={false}
    bgStyle="transparent"
    borderRadius={null}
    className={null}
    colorSchema={null}
    content={null}
    controlled={true}
    disabled={false}
    displayBlock={false}
    dynamic={false}
    elevation={null}
    elevationHover={null}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={0}
    onClick={null}
    pressed={false}
    pureRender={false}
    ref_={null}
    selected={false}
    size="m"
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  >
    12345
  </Button>
</li>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props content 2`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Button
    baseline={false}
    bgStyle="transparent"
    borderRadius={null}
    className={null}
    colorSchema={null}
    content={null}
    controlled={true}
    disabled={false}
    displayBlock={false}
    dynamic={false}
    elevation={null}
    elevationHover={null}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={0}
    onClick={null}
    pressed={false}
    pureRender={false}
    ref_={null}
    selected={false}
    size="m"
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="This is Content from ContentMixin"
    />
  </Button>
</li>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props content 3`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Button
    baseline={false}
    bgStyle="transparent"
    borderRadius={null}
    className={null}
    colorSchema={null}
    content={null}
    controlled={true}
    disabled={false}
    displayBlock={false}
    dynamic={false}
    elevation={null}
    elevationHover={null}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={0}
    onClick={null}
    pressed={false}
    pureRender={false}
    ref_={null}
    selected={false}
    size="m"
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="This is Content from ContentMixin"
    />
  </Button>
</li>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props content 4`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Button
    baseline={false}
    bgStyle="transparent"
    borderRadius={null}
    className={null}
    colorSchema={null}
    content={null}
    controlled={true}
    disabled={false}
    displayBlock={false}
    dynamic={false}
    elevation={null}
    elevationHover={null}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={0}
    onClick={null}
    pressed={false}
    pureRender={false}
    ref_={null}
    selected={false}
    size="m"
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  >
    12345
  </Button>
</li>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props controlled 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props controlled 2`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props controlled 3`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props controlled 4`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props default props 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props disabled 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item uu5-common-disabled"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</li>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props disabled 2`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props disabled 3`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props disabled 4`] = `
<li
  className="uu5-bricks-nav-bar-nav-item uu5-common-disabled"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</li>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props dynamic 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props dynamic 2`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props dynamic 3`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props dynamic 4`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props hidden 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item uu5-common-hidden"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props hidden 2`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props hidden 3`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props hidden 4`] = `
<li
  className="uu5-bricks-nav-bar-nav-item uu5-common-hidden"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props id 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="myId"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props ignoreHTML 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props ignoreHTML 2`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props ignoreHTML 3`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props ignoreHTML 4`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props mainAttrs 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props name 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  name="myName"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props noIndex 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item uu5-noindex"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props noIndex 2`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props noIndex 3`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props noIndex 4`] = `
<li
  className="uu5-bricks-nav-bar-nav-item uu5-noindex"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props pureRender 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props pureRender 2`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props pureRender 3`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props pureRender 4`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props selected 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item uu5-common-selected"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props selected 2`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props selected 3`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props selected 4`] = `
<li
  className="uu5-bricks-nav-bar-nav-item uu5-common-selected"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props style 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props style 2`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props style 3`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props style 4`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props textCorrector 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props textCorrector 2`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props textCorrector 3`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props textCorrector 4`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props tooltip 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title="My Tooltip"
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props.Function UU5.Bricks.NavBar.Nav.Item -  onClick() should be called 1`] = `
<NavBar
  alwaysOpen={false}
  className={null}
  colorSchema="primary"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  elevation={null}
  fixed={null}
  hidden={false}
  iconClosed="mdi-menu"
  iconOpen="mdi-menu"
  id={null}
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel={null}
  noIndex={false}
  offset={null}
  onClose={null}
  onOpen={null}
  open={false}
  pureRender={false}
  ref_={null}
  selected={false}
  size="m"
  smoothScroll={1000}
  style={null}
  tooltip={null}
>
  <nav-bar-nav
    _size="m"
    aligned="left"
    allowTags={Array []}
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    noIndex={false}
    offset={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    tooltip={null}
  >
    <nav-bar-nav-item
      _size="m"
      className={null}
      colorSchema={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      noIndex={false}
      onClick={[Function]}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      onClick
    </nav-bar-nav-item>
  </nav-bar-nav>
</NavBar>
`;
